fix: make music section mobile responsive

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -8,26 +8,5 @@
     margin-bottom: 20px;
   }
 
-  &-spotify {
-    &-data {
-      align-items: flex-start;
-      display: inline-flex;
-      gap: 2cqmin;
-      width: 100%;
-    }
-
-    &-current {
-      width: 60%;
-
-      img {
-        margin-left: auto;
-        margin-top: 6px;
-        width: 100%;
-      }
-    }
-
-    &-top-artists {
-      width: 40%;
-    }
-  }
+  
 }
